--- a/realestate/templates/base.html
+++ b/realestate/templates/base.html
@@ -22,7 +22,15 @@
         {% endif %}
 
         {# Global stylesheets #}
+
         <link rel="stylesheet" type="text/css" href="{% static 'css/realestate.css' %}">
+        <link rel="stylesheet" href="{% static 'fonts/icomoon/style.css' %}" />
+        <link rel="stylesheet" href="{% static 'fonts/flaticon/font/flaticon.css' %}" />
+        <link rel="stylesheet" href="{% static 'fonts/flaticon/font/flaticon.css' %}" />
+
+        <link rel="stylesheet" href="{% static 'css/tiny-slider.css' %}" />
+        <link rel="stylesheet" href="{% static 'css/aos.css' %}" />
+        <link rel="stylesheet" href="{% static 'css/style.css' %}" />
 
         {% block extra_css %}
         {# Override this in templates to add extra stylesheets #}
@@ -31,11 +39,58 @@
 
     <body class="{% block body_class %}{% endblock %}">
         {% wagtailuserbar %}
+    <nav class="site-nav">
+      <div class="container">
+        <div class="menu-bg-wrap">
+          <div class="site-navigation">
+            <a href="index.html" class="logo m-0 float-start">Property</a>
 
+            <ul
+              class="js-clone-nav d-none d-lg-inline-block text-start site-menu float-end"
+            >
+              <li class="active"><a href="index.html">Home</a></li>
+              <li class="has-children">
+                <a href="properties.html">Properties</a>
+                <ul class="dropdown">
+                  <li><a href="#">Buy Property</a></li>
+                  <li><a href="#">Sell Property</a></li>
+                  <li class="has-children">
+                    <a href="#">Dropdown</a>
+                    <ul class="dropdown">
+                      <li><a href="#">Sub Menu One</a></li>
+                      <li><a href="#">Sub Menu Two</a></li>
+                      <li><a href="#">Sub Menu Three</a></li>
+                    </ul>
+                  </li>
+                </ul>
+              </li>
+              <li><a href="services.html">Services</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+
+            <a
+              href="#"
+              class="burger light me-auto float-end mt-1 site-menu-toggle js-menu-toggle d-inline-block d-lg-none"
+              data-toggle="collapse"
+              data-target="#main-navbar"
+            >
+              <span></span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </nav>
         {% block content %}{% endblock %}
 
         {# Global javascript #}
-        <script type="text/javascript" src="{% static 'js/realestate.js' %}"></script>
+            <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+            <script src="{% static 'js/tiny-slider.js' %}"></script>
+            <script src="{% static 'js/aos.js' %}"></script>
+            <script src="{% static 'js/navbar.js' %}"></script>
+            <script src="{% static 'js/counter.js' %}"></script>
+            <script src="{% static 'js/custom.js' %}"></script>
+            <script type="text/javascript" src="{% static 'js/realestate.js' %}"></script>
 
         {% block extra_js %}
         {# Override this in templates to add extra javascript #}
