fix: handle about us text

--- a/realestate/templates/flex/flex_page.html
+++ b/realestate/templates/flex/flex_page.html
@@ -43,7 +43,7 @@
             {% for block in page.content %}
           <div class="col-lg-6">
             <p class="text-black-50">
-            {% include_block blcok %}
+            {% include_block block %}
             </p>
           </div>
             {% endfor %}
